# seird-simulator

./: CMakeLists.txt  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  ford.yml
src/: io_mod.f90  main.f90  numerics_mod.f90  parameters_mod.f90  precision_mod.f90  seird_model_mod.f90  visualization_mod.f90
test/: test_io.pf  test_main.pf  test_numerics.pf  test_parameters.pf  test_precision.pf  test_seird_model.pf  test_visualization.pf
